--- a/projects/angular/src/data/tree-view/_variables.tree-view.scss
+++ b/projects/angular/src/data/tree-view/_variables.tree-view.scss
@@ -12,6 +12,7 @@
 $clr-tree-border-radius: var(--clr-tree-border-radius) !default;
 
 $clr-tree-caret-size: #{density.$clr-base-icon-size-s} !default;
+$clr-tree-checkbox-size: #{density.$clr-base-icon-size-s} !default;
 $clr-tree-spinner-size: #{density.$clr-base-icon-size-s} !default;
 $clr-tree-node-touch-target: #{density.$clr-base-icon-size-2xl} !default;
 $clr-tree-node-children-margin: $clr-tree-node-touch-target !default;
